Added the second setion of the website

--- a/index.html
+++ b/index.html
@@ -20,22 +20,43 @@
     </div>
 
     <div class="about">
-b
+        <div class="abouthead">
+        <h1>This Website is awesome</h1>
+        <div class="abouttext">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, 
+            consequuntur reiciendis quos voluptates nulla ipsa debitis cupiditate odio nemo dicta. 
+            Nemo tempora harum et quam culpa! 
+        </div>
+        <br>
+        <button type="button" class="aboutbutton">Sign up</button>
+        </div>
+        <div class="aboutsecond">
+            Image will be inserted
+        </div>
     </div>
     <div class="information">
-c
+        Some random information
     </div>
 
+    <div class="subinformation">
+        <div class="subinformationcontainer">
+        <div class="subinformationdiv">
+        <div class="subinfoirmationdivtext">
+            This is some subtext under an illustration or image
+        </div>
+        </div>
+    </div>
+    </div>
     <div class="quote">
-d
+        d
     </div>
 
     <div class="actioncall">
-e
+        e
     </div>
 
     <div class="footer">
-f
+        f
     </div>
 </body>
 </html>
