Add Information and Sub Information sections

--- a/index.html
+++ b/index.html
@@ -39,16 +39,32 @@
     </div>
 
     <div class="subinformation">
-        <div class="subinformationcontainer">
-        <div class="subinformationdiv">
-        <div class="subinfoirmationdivtext">
-            This is some subtext under an illustration or image
-        </div>
-        </div>
-    </div>
+        <label for="ABC" class="subinformationlabel">
+            <div class="subinformationdiv"></div>
+        <div class="subinformationtext">this is some subtext under an illustration or image</div>
+        </label>
+        <label for="ABC" class="subinformationlabel">
+            <div class="subinformationdiv"></div>
+        <div class="subinformationtext">this is some subtext under an illustration or image</div>
+        </label>
+        <label for="ABC" class="subinformationlabel">
+            <div class="subinformationdiv"></div>
+        <div class="subinformationtext">this is some subtext under an illustration or image</div>
+        </label>
+        <label for="ABC" class="subinformationlabel">
+            <div class="subinformationdiv"></div>
+        <div class="subinformationtext">this is some subtext under an illustration or image</div>
+        </label>
+        <label for="ABC" class="subinformationlabel">
+            <div class="subinformationdiv"></div>
+        <div class="subinformationtext">this is some subtext under an illustration or image</div>
+        </label>
     </div>
     <div class="quote">
-        d
+        <div class="quotetext">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil a impedit illo possimus distinctio. Excepturi sit ipsum saepe illum et!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit saepe deleniti eum fugiat amet dolorem fugit non similique itaque doloribus.
+        </div>
     </div>
 
     <div class="actioncall">
